hphp/test/quick/no_hh/no_hh.php.expectf
Fatal error: Syntax only allowed in Hack files (<?hh) or with -v Eval.EnableHipHopSyntax=true in %s on line 3
